# satyr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WORKSPACE  config.h.in  version.h.in
.circleci/: config.yml
bazel/: BUILD  local.bzl  netlib.BUILD  netlib_src.BUILD  satyr_build_system.bzl  satyr_deps.bzl  tbb.BUILD
ci/: BUILD.blas  BUILD.lapack  Dockerfile  WORKSPACE  do_ci.sh  netlib.BUILD  run_satyr_docker.sh  tbb.BUILD
cmake/Modules/: FindJemalloc.cmake  FindMKL.cmake
core/: BUILD  CMakeLists.txt
core/include/satyr/: atlas.h  blas_lapack.h  blas_lapack_impl.h  blocked_range.h  execution_policy.h  fallback_parallel_for.h  fallback_parallel_reduce.h  for_each_index.h  functional.h  index_reducer.h  initializer_multilist.h  k_evaluator.h  math_reducer.h  mkl.h  parallel_for.h  parallel_reduce.h  pragma.h  preprocessor.h  reduce.h  reduce_each_index.h  serial_for.h  serial_for_each_index.h  serial_reduce.h  serial_reduce_each_index.h  tbb_for.h  tbb_reduce.h  traits.h  type_list.h
core/test/: BUILD  for_test.cpp  policy_test.cpp
example/: BUILD  CMakeLists.txt  expression_template.cpp  tutorial.cpp
include/satyr/: blas_lapack.h  concept.h  cvref_qualifer.def  execution_policy.h  fallback_parallel_for.h  for.h  for_each_index.h  functional.h  index.h  initializer_multilist.h  matrix.h  matrix_operation.h  matrix_side.h  mkl.h  parallel_for.h  policy.h  pragma.h  serial_for.h  tbb_for.h  traits.h  uplo.h
k_array/: BUILD
k_array/include/satyr/: k_array.h
k_array/include/satyr/k_array/: k_array.h  k_array_accessor.h  k_array_subview.h  k_array_view.h  print.h  shape.h  shaped.h  slice.h  subshape.h  traits.h
k_array/test/: BUILD  CMakeLists.txt  k_array_test.cpp  test_k_array.cpp
linear_algebra/: BUILD  CMakeLists.txt
linear_algebra/benchmark/: CMakeLists.txt  bench_matrix.cpp
linear_algebra/include/satyr/: linear_algebra.h
linear_algebra/include/satyr/linear_algebra/: apply.h  cholesky.h  common_structure.h  concept.h  conversion_evaluator.h  diagonal_matrix.h  math.h  matrix.h  matrix_accessor.h  norm.h  operation_matrix_expression.h  partial_cholesky.h  product.h  solve.h  structure.h  transpose.h  utility.h  vector.h
linear_algebra/test/: BUILD  CMakeLists.txt  blas_lapack_test.cpp  matrix_test.cpp  test_blas_lapack.cpp  test_matrix.cpp
log_context/: BUILD
log_context/include/satyr/: log_context.h
log_context/src/: log_context.cpp
log_context/test/: BUILD  log_context_test.cpp
n_array/: BUILD
n_array/include/satyr/: n_array.h
n_array/include/satyr/n_array/: access_mode.h  apply.h  arithmetic.h  common_shape.h  common_structure.h  concept.h  conversion_evaluator.h  equality.h  evaluator.h  execute.h  expression.h  for_each.h  jemalloc_allocation.h  k_evaluator.h  map.h  map_evaluator.h  map_indexes.h  math.h  n_array.h  n_array_accessor.h  n_array_assignment.h  n_array_evaluator.h  n_array_expression.h  n_array_reduction_expression.h  n_array_subview.h  n_array_view.h  policy.h  print.h  scalar_allocator.h  scalar_evaluator.h  scalar_expression.h  standard_allocation.h  structure.h  structure_cast.h  utility.h
n_array/test/: BUILD  CMakeLists.txt  expression_test.cpp  map_test.cpp  n_array_test.cpp  test_map.cpp  test_n_array.cpp
test/: BUILD  CMakeLists.txt  test_concept.cpp  test_for.cpp  test_policy.cpp
test/include/satyr/test/: data_dictionary.h
test/src/: array.cpp  array.h  data_dictionary.cpp  lex.cpp  lex.h  read_data_dictionaries.cpp  token_stream.h
test/test/: BUILD  CMakeLists.txt  array_test.cpp  data_dictionary_test.cpp  lex_test.cpp  token_stream_test.cpp
